5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3989/executions/1590_842.log
== TEST (2019-03-22 15:50:37) 
-- CODE:
n1 = int(input("Digite um numero inteiro de quatros digitos"))


-- OUTPUT:
-2
0
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 15:54:38) 
-- CODE:
n1 = int(input("Digite um numero inteiro de quatros digitos:"))

soma = 0 

while (n>0)
    resto = n1 % 10
	 n = n//10
	 soma = soma + resto
	
print ("A soma dos números é: ", soma)



-- ERROR:
File "XXXX", line 5
    while (n>0)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 15:54:52) 
-- CODE:
n1 = int(input("Digite um numero inteiro de quatros digitos:"))

soma = 0 

while (n>0):
    resto = n1 % 10
	 n = n//10
	 soma = soma + resto
	
print ("A soma dos números é: ", soma)



-- ERROR:
File "XXXX", line 7
    n = n//10
            ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 20:53:39) 
-- CODE:
var1 = 3141
soma = (sum(int(i) for i in n))
print(soma)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    soma = (sum(int(i) for i in n))
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 20:53:51) 
-- CODE:
var1 = 3141
soma = (sum(int(i) for i in var1))
print(soma)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    soma = (sum(int(i) for i in var1))
TypeError: 'int' object is not iterable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 20:54:23) 
-- CODE:
var1 = 3141
soma = sum(int(i) for i in strt var1))
print(soma)



-- ERROR:
File "XXXX", line 2
    soma = sum(int(i) for i in strt var1))
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 20:54:47) 
-- CODE:
var1 = 3141
soma = sum(int(i) for i in str (var1))
print(soma)



-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 20:54:51) 
-- CODE:
var1 = 3141
soma = sum(int(i) for i in str (var1))
print(soma)



-- EXECUTION TIME:
0.166727
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
9
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 20:54:54) 
-- CODE:
var1 = 3141
soma = sum(int(i) for i in str (var1))
print(soma)



-- EXECUTION TIME:
0.135777
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
9
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 20:55:16) 
-- CODE:
var1 = 3141
soma = sum(int(i) for i in str (var1))
print (soma)



-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 20:55:20) 
-- CODE:
var1 = 3141
soma = sum(int(i) for i in str (var1))
print (soma)



-- EXECUTION TIME:
0.172894
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
9
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:46:29) 
-- CODE:
var1 = 3141
soma = sum(int(i)) for i in str(n)
print(soma)



-- ERROR:
File "XXXX", line 2
    soma = sum(int(i)) for i in str(n)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:46:42) 
-- CODE:
var1 = 3141
soma = sum(int(i)) for i in str(n))
print(soma)



-- ERROR:
File "XXXX", line 2
    soma = sum(int(i)) for i in str(n))
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:46:52) 
-- CODE:
var1 = 3141
soma = sum (int(i) for i in str(n))
print(soma)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    soma = sum (int(i) for i in str(n))
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:47:06) 
-- CODE:
var1 = 3141
soma = sum (int(i) for i in str(var1))
print(soma)



-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 00:47:10) 
-- CODE:
var1 = 3141
soma = sum (int(i) for i in str(var1))
print(soma)



-- EXECUTION TIME:
0.183245
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
9
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 00:47:14) 
-- CODE:
var1 = 3141
soma = sum (int(i) for i in str(var1))
print(soma)



-- EXECUTION TIME:
0.148191
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
9
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:51:52) 
-- CODE:
var1 = int (input(" "))
soma = 0
soma = var1%10
var1 = numero//10
print(var1)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var1 = numero//10
NameError: name 'numero' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 00:51:56) 
-- CODE:
var1 = int (input(" "))
soma = 0
soma = var1%10
var1 = numero//10
print(var1)




-- EXECUTION TIME:
0.177001
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/842/main.py", line 4, in <module>
    var1 = numero//10
NameError: name 'numero' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:21:23) 
-- CODE:
v = int(input("Digite o numero:"))

b = v//1000
c = v% 1000

d = c//100
e = c%100

f=e//10
g=e%10

soma = b + d + f + h

print(soma)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    soma = b + d + f + h
NameError: name 'h' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:22:28) 
-- CODE:
v = int(input("Digite o numero:"))

b = v//1000
c = v% 1000

d = c//100
e = c%100

f=e//10
g=e%10

h = g//1
soma = b + d + f + h

print(soma)





-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:22:33) 
-- CODE:
v = int(input("Digite o numero:"))

b = v//1000
c = v% 1000

d = c//100
e = c%100

f=e//10
g=e%10

h = g//1
soma = b + d + f + h

print(soma)





-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 13:22:42) 
-- CODE:
v = int(input("Digite o numero:"))

b = v//1000
c = v% 1000

d = c//100
e = c%100

f=e//10
g=e%10

h = g//1
soma = b + d + f + h

print(soma)





-- EXECUTION TIME:
0.176463
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
20
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
